	of assuming a c-runtime implimentation of _beginthreadex normal,
	I reversed the logic to not assume, and use when is by explicitly
	needing to add runtimes that support it such as Borland.

	* generic/tcl.h:
	* generic/tclPlatDecls.h:  Borland compatibility change so
	ClientData was properly typed as a void* and TCHAR would not be
	defined twice.

2001-09-04  Don Porter  <dgp@users.sourceforge.net>

	* compat/strtod.c (strtod):  Fixed failure to handle expressions
	like 3eq2 and failure to set errno on overflow.  [Bug 440894]

2001-09-04  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclProc.c:
	* tests/proc.test: made [proc] check that formal args have
	simple names [Bug: 458548] 

2001-09-04 Vince Darley <vincentdarley@users.sourceforge.net>

	Minor bug fixes in filesystem, plus small vfs changes as a 
	result of enabling the test filesystem to work properly.
	* tests/fileName.test: ensure new test cleans up after itself
	* doc/filename.n: 
	* generic/tclFileName.c: improved Mac path handling and document
	why [Bug: 421842] on Windows handling of UNC paths is not valid.
	Documentation and code now much clearer on what is and is not a 
	UNC path.
	* doc/FileSystem.3:
	* unix/tclUnixPipe.c:
	* generic/tclFCmd.c:
	* generic/tclIOUtil.c: fixed error message, fixed [Bug: 453512]
	about dangerous use of tmpnam, replaced with mkstemp.  
	Documented all the changes.
	* generic/tclTest.c: made test vfs fully functional as a 
	'reporting filesystem'.
	* generic/tcl.stubs:
	* generic/tcl.h:
	* generic/tclInt.h: 
	* generic/tclIOUtil.c:
	* doc/file.n:
	* various platform-specific 'TclpLoadFile': fixed comments about 
	unload behaviour, and completed objectification of loading.
	Required change to Tcl_Filesystem lookup table, so incompatible
	with 8.4a3, but not older versions of Tcl.  The change also
	allows 'link' and 'reporting' filesystems to function correctly
	when loading files.  Implementation of 'file delete -force'